--- a/pyroscope/values.yaml
+++ b/pyroscope/values.yaml
@@ -187,7 +187,7 @@ pyroscope:
     storage:
       backend: s3
       s3:
-        endpoint: "minio.minio.svc.cluster.local:443"
+        endpoint: "default-hl.minio.svc.cluster.local:9000"
         bucket_name: pyroscope
         access_key_id: 3ItWE9jHmhIqz2Bk2Ho4  
         secret_access_key: jLG8LAnawBZreKFRifPHHmBUjPmklZhDSk0Vl8BB
