--- a/pyroscope/values.yaml
+++ b/pyroscope/values.yaml
@@ -187,11 +187,11 @@ pyroscope:
     storage:
       backend: s3
       s3:
-        endpoint: "default-hl.minio.svc.cluster.local:9000"
+        endpoint: "minio.minio.svc.cluster.local:9000"
         bucket_name: pyroscope
         access_key_id: 3ItWE9jHmhIqz2Bk2Ho4  
         secret_access_key: jLG8LAnawBZreKFRifPHHmBUjPmklZhDSk0Vl8BB
-        insecure: false
+        insecure: true
 
   # -- Allows to add tenant specific overrides to the default limit configuration.
   tenantOverrides:
