--- a/pyroscope/values.yaml
+++ b/pyroscope/values.yaml
@@ -189,8 +189,8 @@ pyroscope:
       s3:
         endpoint: "minio.minio.svc.cluster.local:9000"
         bucket_name: pyroscope
-        access_key_id: 3ItWE9jHmhIqz2Bk2Ho4  
-        secret_access_key: jLG8LAnawBZreKFRifPHHmBUjPmklZhDSk0Vl8BB
+        access_key_id: Als13cgkzAkBZcxG0ZWC  
+        secret_access_key: cQEYqadNi6u5WkLgUBm34mzNB0158ZLV6BPK040i
         insecure: true
 
   # -- Allows to add tenant specific overrides to the default limit configuration.
