--- a/tempo/values.yaml
+++ b/tempo/values.yaml
@@ -1769,8 +1769,8 @@ storage:
       tls_insecure_skip_verify: true
       bucket: tempo                        # store traces in this bucket
       endpoint: "minio.minio.svc.cluster.local:9000"  # api endpoint
-      access_key: 3ItWE9jHmhIqz2Bk2Ho4                                 # optional. access key when using static credentials.
-      secret_key: jLG8LAnawBZreKFRifPHHmBUjPmklZhDSk0Vl8BB                                 # optional. secret key when using static credentials.
+      access_key: Als13cgkzAkBZcxG0ZWC                                 # optional. access key when using static credentials.
+      secret_key: cQEYqadNi6u5WkLgUBm34mzNB0158ZLV6BPK040i                           # optional. secret key when using static credentials.
       insecure: true                                 # optional. enable if endpoint is http
     #      backend: local
 #      local:
