--- a/loki/templates/validate.yaml
+++ b/loki/templates/validate.yaml
@@ -2,9 +2,9 @@
 {{- fail "Top level 'config' is not allowed. Most common configuration sections are exposed under the `loki` section. If you need to override the whole config, provide the configuration as a string that can contain template expressions under `loki.config`. Alternatively, you can provide the configuration as an external secret." }}
 {{- end }}
 
-{{- if and (not .Values.lokiCanary.enabled) .Values.test.enabled }}
-{{- fail "Helm test requires the Loki Canary to be enabled"}}
-{{- end }}
+#{{- if and (not .Values.lokiCanary.enabled) .Values.test.enabled }}
+#{{- fail "Helm test requires the Loki Canary to be enabled"}}
+#{{- end }}
 
 {{- $singleBinaryReplicas := int .Values.singleBinary.replicas }}
 {{- $isUsingFilesystem := eq (include "loki.isUsingObjectStorage" .) "false" }}
