--- a/pyroscope/values-prod.yaml
+++ b/pyroscope/values-prod.yaml
@@ -1,6 +1,8 @@
 # Default values for pyroscope.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
+alloy:
+  enabled: false
 
 pyroscope:
   extraArgs:
