--- a/tempo/values.yaml
+++ b/tempo/values.yaml
@@ -798,7 +798,7 @@ compactor:
   config:
     compaction:
       # -- Duration to keep blocks
-      block_retention: 30d
+      block_retention: 48h
       # Duration to keep blocks that have been compacted elsewhere
       compacted_block_retention: 1h
       # -- Blocks in this time window will be compacted together
