--- a/pyroscope/values-prod.yaml
+++ b/pyroscope/values-prod.yaml
@@ -7,7 +7,7 @@ alloy:
 pyroscope:
   extraArgs:
     store-gateway.sharding-ring.replication-factor: "3"
-    log.level: info
+    log.level: debug
   components:
     querier:
       kind: Deployment
