--- a/prometheus/prometheus-prometheus.yaml
+++ b/prometheus/prometheus-prometheus.yaml
@@ -18,7 +18,8 @@ spec:
       name: alertmanager-main
       namespace: monitoring
       port: web
-  enableFeatures: []
+  enableFeatures:
+    - exemplar-storage
   externalLabels: {}
   image: quay.io/prometheus/prometheus:v3.3.1
   nodeSelector:
