--- a/alloy/values-prod.yaml
+++ b/alloy/values-prod.yaml
@@ -9,6 +9,7 @@ alloy:
           url = "http://loki-distributor.monitoring.svc.cluster.local:3100/loki/api/v1/push"
         }
       }
+      
       discovery.kubernetes "argocd" {
         namespaces {
           names = ["argocd"]
@@ -31,6 +32,20 @@ alloy:
       loki.source.kubernetes "app" {
         targets    = discovery.kubernetes.app.targets
         forward_to = [loki.write.default.receiver]
+      
+        attributes {
+          pod_name       = "metadata.name"
+          namespace      = "metadata.namespace"
+          node_name      = "spec.nodeName"
+          container_name = "metadata.container.name"
+          labels         = "metadata.labels"
+          annotations    = "metadata.annotations"
+        }
+      
+        labels {
+          service = "applications"
+          env     = "prod"
+        }
       }
       
       loki.source.kubernetes_events "appEvent" {
