update alloy config

--- a/alloy/values-prod.yaml
+++ b/alloy/values-prod.yaml
@@ -10,6 +10,9 @@ alloy:
         }
       }
       
+      # -------------------------------
+      # argocd namespace
+      # -------------------------------
       discovery.kubernetes "argocd" {
         namespaces {
           names = ["argocd"]
@@ -17,11 +20,73 @@ alloy:
         role = "pod"
       }
       
+      # relabel argocd pod logs
+      discovery.relabel "argocd_pod_logs" {
+        targets = discovery.kubernetes.argocd.targets
+      
+        # Pod/Namespace/Container/Node/App 标签
+        rule {
+          source_labels = ["__meta_kubernetes_namespace"]
+          action        = "replace"
+          target_label  = "namespace"
+        }
+        rule {
+          source_labels = ["__meta_kubernetes_pod_name"]
+          action        = "replace"
+          target_label  = "pod"
+        }
+        rule {
+          source_labels = ["__meta_kubernetes_pod_container_name"]
+          action        = "replace"
+          target_label  = "container"
+        }
+        rule {
+          source_labels = ["__meta_kubernetes_node_name"]
+          action        = "replace"
+          target_label  = "node"
+        }
+        rule {
+          source_labels = ["__meta_kubernetes_pod_label_app_kubernetes_io_name"]
+          action        = "replace"
+          target_label  = "app"
+        }
+      
+        # job 标签示例
+        rule {
+          source_labels = ["__meta_kubernetes_namespace", "__meta_kubernetes_pod_container_name"]
+          action        = "replace"
+          target_label  = "job"
+          separator     = "/"
+          replacement   = "$1/$2"
+        }
+      
+        # 日志路径
+        rule {
+          source_labels = ["__meta_kubernetes_pod_uid", "__meta_kubernetes_pod_container_name"]
+          action        = "replace"
+          target_label  = "__path__"
+          separator     = "/"
+          replacement   = "/var/log/pods/*$1/$2.log"
+        }
+      
+        # container runtime
+        rule {
+          source_labels = ["__meta_kubernetes_pod_container_id"]
+          action        = "replace"
+          target_label  = "container_runtime"
+          regex         = "^(\\S+):\\/\\/.+$"
+          replacement   = "$1"
+        }
+      }
+      
       loki.source.kubernetes "argocd" {
-        targets    = discovery.kubernetes.argocd.targets
+        targets    = discovery.relabel.argocd_pod_logs.output
         forward_to = [loki.write.default.receiver]
       }
       
+      # -------------------------------
+      # applications namespace
+      # -------------------------------
       discovery.kubernetes "app" {
         namespaces {
           names = ["applications"]
@@ -29,20 +94,66 @@ alloy:
         role = "pod"
       }
       
-      loki.source.kubernetes "app" {
-        targets    = discovery.kubernetes.app.targets
-        forward_to = [loki.write.default.receiver]
+      # relabel app pod logs
+      discovery.relabel "app_pod_logs" {
+        targets = discovery.kubernetes.app.targets
       
-        label_template {
-          pod_name       = "{{`{{pod.metadata.name}}`}}"
-          namespace      = "{{`{{pod.metadata.namespace}}`}}"
-          node_name      = "{{`{{pod.spec.nodeName}}`}}"
-          container_name = "{{`{{container.name}}`}}"
-          service        = "applications"
-          env            = "prod"
+        rule {
+          source_labels = ["__meta_kubernetes_namespace"]
+          action        = "replace"
+          target_label  = "namespace"
+        }
+        rule {
+          source_labels = ["__meta_kubernetes_pod_name"]
+          action        = "replace"
+          target_label  = "pod"
+        }
+        rule {
+          source_labels = ["__meta_kubernetes_pod_container_name"]
+          action        = "replace"
+          target_label  = "container"
+        }
+        rule {
+          source_labels = ["__meta_kubernetes_node_name"]
+          action        = "replace"
+          target_label  = "node"
+        }
+        rule {
+          source_labels = ["__meta_kubernetes_pod_label_app_kubernetes_io_name"]
+          action        = "replace"
+          target_label  = "app"
+        }
+        rule {
+          source_labels = ["__meta_kubernetes_namespace", "__meta_kubernetes_pod_container_name"]
+          action        = "replace"
+          target_label  = "job"
+          separator     = "/"
+          replacement   = "$1/$2"
+        }
+        rule {
+          source_labels = ["__meta_kubernetes_pod_uid", "__meta_kubernetes_pod_container_name"]
+          action        = "replace"
+          target_label  = "__path__"
+          separator     = "/"
+          replacement   = "/var/log/pods/*$1/$2.log"
+        }
+        rule {
+          source_labels = ["__meta_kubernetes_pod_container_id"]
+          action        = "replace"
+          target_label  = "container_runtime"
+          regex         = "^(\\S+):\\/\\/.+$"
+          replacement   = "$1"
         }
       }
       
+      loki.source.kubernetes "app" {
+        targets    = discovery.relabel.app_pod_logs.output
+        forward_to = [loki.write.default.receiver]
+      }
+      
+      # -------------------------------
+      # Kubernetes events
+      # -------------------------------
       loki.source.kubernetes_events "appEvent" {
         namespaces = ["app"]
         forward_to = [loki.write.default.receiver]
